--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,13 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&display=swap');
+
 html, body {
     margin: 0;
     padding: 0;
+    text-align: none !important;
 }
 
+a {
+    text-decoration: none;
+}
+
+.row {
+    margin: 0;
+}
 
 .NavBar {
-    background: yellow;    
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;    
+    line-height: 60px;
+    height: 60px;
+    background: rgb(240, 240, 231);    
 }
 
 .heading {
+    color: rgb(34, 109, 134);
+    font-family: 'Lobster', cursive; 
+    font-size: 32px;   
     margin: 0;
 }
