--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -14,17 +14,40 @@ a {
     margin: 0;
 }
 
-.NavBar {
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;    
-    line-height: 60px;
-    height: 60px;
-    background: rgb(240, 240, 231);    
+.logo {
+    font-family: 'Lobster', cursive;
+    font-size: 36px;    
 }
 
-.heading {
-    color: rgb(34, 109, 134);
-    font-family: 'Lobster', cursive; 
-    font-size: 32px;   
-    margin: 0;
+.custom-nav {    
+    position: absolute;
+    width: 100%;
+    z-index: 1;    
+}
+
+.logo {
+    color: black !important;
+}
+
+.links {
+    text-align: right;
+    color: rgb(255, 255, 255) !important;
+    font-family: sans-serif;
+    font-weight: 600;
+}
+
+.navbar-toggler {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-color: rgb(255, 255, 255) !important;
+}
+
+
+/* media-screen */
+@media screen and (max-width: 560px){    
+    .logo {
+        font-size: 24px;
+    } 
+    .navbar-toggler {
+        font-size: 16px;
+    }  
 }
