--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -16,7 +16,8 @@ a {
 
 .logo {
     font-family: 'Lobster', cursive;
-    font-size: 36px;    
+    font-size: 36px;
+    color: black !important;    
 }
 
 .custom-nav {    
@@ -25,23 +26,30 @@ a {
     z-index: 1;    
 }
 
-.logo {
-    color: black !important;
-}
-
 .links {
     text-align: right;
-    color: rgb(255, 255, 255) !important;
+    color: rgb(0, 0, 0) !important;
     font-family: sans-serif;
     font-weight: 600;
 }
 
 .navbar-toggler {
-    background-color: rgba(0, 0, 0, 0.5);
-    border-color: rgb(255, 255, 255) !important;
+    color:rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.0);
+    border-color: rgba(255, 255, 255, 0.0) !important;
 }
 
+span.navbar-toggler-icon {
+    color:rgb(0, 0, 0);
+}
 
+.navbar-dark .navbar-toggler-icon {
+    background-image: url('../../burger.png');
+}
+
+button:focus:not(:focus-visible) {
+    display: none;
+}
 /* media-screen */
 @media screen and (max-width: 560px){    
     .logo {
@@ -49,5 +57,9 @@ a {
     } 
     .navbar-toggler {
         font-size: 16px;
-    }  
+    }
+    
+    .links {
+        font-size: 12px;
+    }
 }
