--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -39,18 +39,18 @@ a {
     border-color: rgba(255, 255, 255, 0.0) !important;
 }
 
-span.navbar-toggler-icon {
+span.navbar-toggler-icon {    
     color:rgb(0, 0, 0);
 }
 
-.navbar-dark .navbar-toggler-icon {
-    transition: 0.4s;
+.navbar-dark .navbar-toggler-icon {    
+    transition: 0.8s;
     background-image: url('../../burger.png');
 }
 
-.navbar-toggler:not(.collapsed) .navbar-toggler-icon {
+.navbar-toggler:not(.collapsed) .navbar-toggler-icon {    
     margin: 0 auto;
-    transition: 0.4s;
+    transition: 0.8s;
     width: 30px;
     height: 30px;      
     background-image: url('../../cross.png');
@@ -59,6 +59,11 @@ span.navbar-toggler-icon {
 button:focus:not(:focus-visible) {
     display: none;
 }
+
+button.navbar-toggler{
+    padding-right: 0;
+}
+
 /* media-screen */
 @media screen and (max-width: 560px){    
     .logo {
