add gif effect on page when loading

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -29,6 +29,7 @@ img {
     font-size: 20px;
     background: rgba(0,0,0,0.3);
     border-radius: 2px;
+    color: #FFD700
 }
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
