--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -27,9 +27,9 @@ img {
 
 .carousel-caption h3 {
     font-size: 20px;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.5);
     border-radius: 2px;
-    color: #FFD700
+    color: #D4AF37;
 }
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
