--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,28 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&display=swap');
 
-/* .carousel {   
-    background: rgba(236, 235, 235, 0.5);
-} */
-
-.carousel-container {
-    padding-top: 10px;
-    justify-content: center;       
-}
-
 .carousel {
-    box-shadow: 5px 5px 5px 5px rgb(187, 186, 186);   
+    margin-top: 20px !important;  
+    width: 220px;
+    margin: 0 auto;
+    box-shadow: 5px 5px 5px 5px rgb(187, 186, 186); 
+    padding-bottom: 20px;  
 }
 
 .offer-header {
     font-family: 'Lobster', cursive;
     border-bottom: 2px solid black;    
-    margin: 0;    
-}
-
-img {
-    width: 100%;       
-    margin: 0 auto;
-    background: rgb(163, 157, 157);
+    margin: 0;
+    margin: 0 20px 0 20px;     
 }
 
 .carousel-caption h3 {
@@ -34,6 +24,9 @@ img {
 
 .carousel-control-next-icon, .carousel-control-prev-icon {
     display: none;
+}
+.carousel-indicators {
+    background-color: rgba(0, 0, 0, 0.5) !important;
 }
 
 /* media-screen */
