--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,11 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&display=swap');
 
 .carousel {
-    margin-top: 20px !important;  
+    margin-top: 50px !important;  
     width: 220px;
     margin: 0 auto;
     box-shadow: 5px 5px 5px 5px rgb(187, 186, 186); 
     padding-bottom: 20px;  
+}
+
+.sales {
+    margin-top: 50px !important;    
+    width: 100%;
+    height: 300px;    
+    background-image: url(https://i.gifer.com/2ii9.gif);    
+    border-radius: 10px;
+    z-index: 999;         
+}
+
+.sales-overlay {
+    position: relative;
+    width: 100%;
+    height: 300px; 
+    background: rgba(255, 0, 0);
+    bottom: 70px;
+    left: 0;
+    z-index: -1;
+}
+
+p {
+    font-family: 'Lobster', cursive;
+    font-size: 40px;
+    position: relative;
+    top: 40%;
 }
 
 .offer-header {
@@ -33,12 +59,35 @@
 @media screen and (max-width: 992px){
     .carousel-caption h3 {
         font-size: 20px;
-    }   
+    }    
     
 }
+
+@media screen and (max-width: 751px){
+    .sales {
+        margin: 0 auto;
+        width: 80%;
+        height: 150px;        
+    } 
+    
+    .sales-overlay {
+        margin: 0 auto;
+        width: 100%;
+        height: 150px; 
+    }
+
+    p {       
+        top: 30%;
+    }
+}
+
 @media screen and (max-width: 560px){
     .carousel-caption h3 {
         font-size: 16px;
-    }       
+    } 
+    
+    .carousel {
+        width: 150px;
+    }
 }
 
