--- a/src/components/Departments/Departments.css
+++ b/src/components/Departments/Departments.css
@@ -19,3 +19,9 @@
     border-bottom: 2px solid black;
     margin: 0 20px 0 20px;  
 }
+
+@media screen and (max-width: 560px){
+    .Departments img{
+        width: 150px;        
+    }       
+}
