--- a/src/components/HeroImage/HeroImage.css
+++ b/src/components/HeroImage/HeroImage.css
@@ -20,3 +20,82 @@ img {
     left: 0%;
     width: 100%;
 }
+
+.city {
+    border-radius: 0;    
+}
+
+.submit-button {
+    background: rgb(0, 0, 0, 0.5);
+    border-radius: 0;
+    border: none;
+        
+}
+
+.submit-col-1 {
+    padding-left: 0;
+}
+
+.form-col-6 {
+    padding-right: 0px;
+    border: none;
+}
+
+.search-bar {
+    position: relative;
+    bottom: 200px;
+}
+
+.form-control {
+    height: 36px;
+}
+
+@media screen and (max-width: 768px){
+    .search-bar {        
+        bottom: 150px;
+    } 
+    
+    .submit-button {
+        font-size: 14px;    
+    }
+
+    .form-control {
+        height: 32px;
+    }
+}
+
+@media screen and (max-width: 576px){
+    .submit-button {
+        font-size: 12px;    
+    }
+
+    .form-control {
+        font-size: 12px;
+    }
+
+    .form-control {
+        height: 30px;
+    }
+
+    .search-bar {
+        position: relative;
+        bottom: 100px;
+    }        
+}
+
+@media screen and (max-width: 400px){
+    .submit-button {
+        font-size: 8px;
+        margin-bottom: 4px;   
+    }
+
+    .form-control {
+        height: 24px;
+    }
+
+    .search-bar {
+        position: relative;
+        bottom: 100px;
+    }        
+}
+
