--- a/src/components/Departments/Departments.css
+++ b/src/components/Departments/Departments.css
@@ -10,7 +10,8 @@
 
 .Departments img:hover {    
     -webkit-transform: scale(0.98); /* Safari 3-8 */
-    transform: scale(0.98); 
+    transform: scale(0.98);
+    opacity: 0.8; 
   }
 
 .category-header {
