--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -74,6 +74,7 @@ p {
         margin: 0 auto;
         width: 100%;
         height: 150px; 
+        bottom: 60px;
     }
 
     p {       
@@ -93,6 +94,10 @@ p {
     
     p {       
         font-size: 24px;
-    }    
+    }
+    
+    .sales-overlay {        
+        bottom: 50px;
+    }
 }
 
