--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -38,7 +38,7 @@ p {
     font-family: 'Lobster', cursive;
     border-bottom: 2px solid black;    
     margin: 0;
-    margin: 0 20px 0 20px;     
+    margin: 20px 20px 0 20px;     
 }
 
 .carousel-caption h3 {
